--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <html>
   <head>
-    <title>Remix: UAserver</title>
+    <title>UAserver Emulator</title>
+    <p>UAserver Emulator</p>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preload" href="applab/fa-brands-400.woff2" as="font">
